mType/tests/testFiles/error/error/invalidImportSymbolNameSpecialChar.mt
import { My@Symbol } from "lib/test.mt";
